# ejercicios-orquestacion

./: .gitignore  LICENSE  README.md
ADK/: ARQUITECTURA de MCP.md  EXPLICACIÓN.md  README de la implementación MCP.md  README.md  agente_biologo_activo.py  agente_biologo_sin_warnings.py  api_inaturalist.py  plantillas_codigo.md  requirements.txt  servidor_mcp.py  sistema_agentes.py  sistema_agentes_con_mcp.py  test_integracion_mcp.py
Agentes/: README.md
Agentes/agent_demo_datar/: agent.py
MCP/: .gitignore  ENTORNO-DESARROLLO.md  GUIA-INTERACCION.md  README.md  cliente_prueba.py  pyproject.toml  servidor_hola_mundo.py  setup-desarrollo.sh  verificar-entorno.py
MCP/API/: README.md  main.py  pyproject.toml  requirements.txt
MCP/diagramas/: arquitectura-mcp.md  flujo-comunicacion.md
MCP/ejercicio-1-cliente/: README.md  cliente_exitoso.py  cliente_mcp.py  requirements.txt
MCP/ejercicio-2-servidor/: README.md  requirements.txt  servidor_basico.py  servidor_mcp.py
MCP/mcp-server-demo/: .gitignore  README.md  main.py  pyproject.toml  server.py
MCP/mcp-server-inaturalist/: README.md  main.py  pyproject.toml  server.py
REFLEX/: .env.example  .gitignore  README.md  requirements.txt  rxconfig.py
REFLEX/prueba_reflex/: __init__.py  prueba_reflex.py
